# pyController

./: README.md  environment.yml  pid_control.py  sensor.py  setup.cfg  setup.py
.github/workflows/: main.yml
examples/: PID_simulation.py  ph-sensor_simulation.py
src/pyController/: __init__.py  on_off_control.py  pid_control.py
tests/: tests.py
